# adsdatahub-py

./: .gitignore  README.md  TODO.md  adsdatahub.code-workspace  pyproject.toml  response.json  schema.json
.github/workflows/: pypi-publish.yml  test-suite.yml
adsdatahub-cli/: .gitignore  README.md  pyproject.toml
adsdatahub-cli/src/adsdatahub_cli/: __main__.py  app.py
adsdatahub-cli/src/adsdatahub_cli/commands/: query.py  validate.py
adsdatahub-cli/tests/: test_akagi_adsdatahub.py
examples/: start_transient.py  start_transient_by_restapi.py
examples/restapi/: start_transient.py
scripts/: bigquery_practice.py  google_package_practice.py
src/ads_data_hub/: __init__.py  client.py
src/ads_data_hub/queries/: query_execution_spec.py
src/ads_data_hub/restapi/: client.py
src/ads_data_hub/restapi/queries/: analysis_query.py
src/ads_data_hub/restapi/resources/: analysis_query.py  operations.py
src/ads_data_hub/restapi/resources/analysis_query/: __init__.py  list.py
src/ads_data_hub/restapi/schemas/: analysis_queries_start.py  analysis_queries_start_transient.py  analysis_query.py  column.py  column_summary_rule.py  date.py  field_type.py  filtered_row_summary.py  merge_column.py  merge_spec.py  merge_type.py  operation.py  output_artifacts.py  parameter_type.py  parameter_value.py  privacy_message.py  privacy_message_type.py  query_execution_spec.py  query_metadata.py  query_response.py  query_share.py  query_state.py  query_type.py  share_type.py  status.py  summary_type.py  temp_table.py
src/adsdatahub/: __init__.py  _helpers.py  _types.py  exceptions.py
src/adsdatahub/client/: client.py  customer.py  mock_client.py  mock_customer.py  mock_query_job.py  noize_info.py  parameters.py  query_job.py  query_result.py  real_client.py  real_customer.py  real_query_job.py
src/adsdatahub/client/customer/: customer.py  mock_customer.py  real_customer.py
src/adsdatahub/client/parameters/: __init__.py  primitive_parameters.py  pydantic_parameters.py
src/adsdatahub/client/query_job/: mock_query_job.py  real_query_job.py
src/adsdatahub/restapi/: _helpers.py  client.py  mock_client.py  real_client.py
src/adsdatahub/restapi/http/: __init__.py  client.py  mock_client.py  real_client.py
src/adsdatahub/restapi/resources/: operations.py
src/adsdatahub/restapi/resources/analysis_queries/: __init__.py  list.py  start_transient.py  validate.py
src/adsdatahub/restapi/resources/analysis_query/: __init__.py  list.py  start.py
src/adsdatahub/restapi/resources/operation/: __init__.py  wait.py
src/adsdatahub/restapi/resources/operations/: __init__.py  list.py
src/adsdatahub/restapi/schemas/: _model.py  _newtype.py  analysis_queries_start.py  analysis_queries_start_transient.py  analysis_query.py  analysis_query_metadata.py  column.py  column_info.py  column_summary_rule.py  date.py  destination_table_info.py  field_type.py  filtered_row_summary.py  merge_column.py  merge_spec.py  noise_impact.py  operation.py  output_artifacts.py  parameter_type.py  parameter_value.py  privacy_message.py  query_execution_spec.py  query_metadata.py  query_performance_info.py  query_response.py  query_share.py  query_state.py  share_type.py  status.py  summary_type.py  table_noise_impact.py  temp_table.py
tests/: conftest.py  helper.py  test_ads_data_hub.py
tests/ads_data_hub/api/: test_analysis_query.py
tests/ads_data_hub/restapi/: test_analysis_query.py
tests/ads_data_hub/restapi/resources/: test_analysis_query.py  test_operation.py
tests/adsdatahub/: test_client.py
tests/adsdatahub/client/: test_client.py  test_mock_client.py  test_real_client.py
tests/adsdatahub/client/parameters/: test_pydantic_parameters.py
tests/adsdatahub/restapi/: test_client.py  test_helpers.py  test_mock_client.py  test_real_client.py
tests/adsdatahub/restapi/resources/: test_analysis_queries.py  test_analysis_queries_mock.py  test_analysis_query.py  test_analysis_query_mock.py  test_mock_analysis_queries.py  test_operation.py  test_operation_mock.py  test_operations.py  test_operations_mock.py
tests/adsdatahub/restapi/schemas/: test_destination_table_info.py
